# OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  FindSOIL.cmake  README.md  main.cpp  soil.cpp
exemples_SOIL/: Block.cpp  Camera.cpp  Map.cpp  Quaternion.cpp  main.cpp  tests.cpp
exemples_SOIL/antoine/: Transform.cpp  Transform.hpp
exemples_SOIL/include/: Block.h  Block.hpp  Map.h  Map.hpp  Quaternion.hpp  glut.h
initiation/: init.c  init.cpp
initiation/common/: GLShader.cpp  GLShader.hpp
initiation/shaders/: Basic.frag  Basic.vert  Vert.frag
load_obj/: main.cpp
rubik/: rubik2.blend  rubik2.blend1  rubik3.blend  rubik3.blend1  rubik_bones.py
supports/: transform3D.vs.glsl.glsl
supports/correction_tp1/: main_esgi3.cpp  simple.fs.glsl  transform.vs.glsl
supports/opengl_base_code_transformation/: main_esgi3.cpp  transform3D.vs.glsl
